--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Background Audio -->
     <audio id="bgMusic" loop autoplay muted>
-        <source src="assets/audio/birthday-song.mp3" type="audio/mpeg">
+        <source src="birthday-song.mp3" type="audio/mpeg">
         <source src="assets/audio/birthday-song.ogg" type="audio/ogg">
     </audio>
 
