--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="gallery-card">
-                            <img src="assets/images/img1.jpg" alt="Coding Session">
+                            <img src="img1.jpg" alt="Coding Session">
                             <div class="gallery-overlay">
                                 <p>Kaka Ma.......</p>
                             </div>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="gallery-card">
-                            <img src="assets/images/img2.jpg" alt="Tech Meetup">
+                            <img src="img2.jpg" alt="Tech Meetup">
                             <div class="gallery-overlay">
                                 <p></p>
                             </div>
@@ -97,7 +97,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="gallery-card">
-                            <img src="assets/images/img3.jpg" alt="Project Launch">
+                            <img src="img3.jpg" alt="Project Launch">
                             <div class="gallery-overlay">
                                 <p></p>
                             </div>
@@ -105,7 +105,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="gallery-card">
-                            <img src="assets/images/img4.jpg" alt="Team Building">
+                            <img src="img4.jpg" alt="Team Building">
                             <div class="gallery-overlay">
                                 <p></p>
                             </div>
@@ -113,7 +113,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="gallery-card">
-                            <img src="assets/images/img5.jpg" alt="Innovation">
+                            <img src="img5.jpg" alt="Innovation">
                             <div class="gallery-overlay">
                                 <p></p>
                             </div>
@@ -121,7 +121,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="gallery-card">
-                            <img src="assets/images/img6.jpg" alt="Achievement">
+                            <img src="img6.jpg" alt="Achievement">
                             <div class="gallery-overlay">
                                 <p></p>
                             </div>
@@ -129,7 +129,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="gallery-card">
-                            <img src="assets/images/img7.jpg" alt="Learning">
+                            <img src="img7.jpg" alt="Learning">
                             <div class="gallery-overlay">
                                 <p></p>
                             </div>
@@ -137,7 +137,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="gallery-card">
-                            <img src="assets/images/img8.jpg" alt="Success">
+                            <img src="img8.jpg" alt="Success">
                             <div class="gallery-overlay">
                                 <p></p>
                             </div>
@@ -145,7 +145,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="gallery-card">
-                            <img src="assets/images/img9.jpg" alt="Future">
+                            <img src="img9.jpg" alt="Future">
                             <div class="gallery-overlay">
                                 <p></p>
                             </div>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="gallery-card">
-                            <img src="assets/images/img10.jpg" alt="Legacy">
+                            <img src="img10.jpg" alt="Legacy">
                             <div class="gallery-overlay">
                                 <p></p>
                             </div>
